1/1.06/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-svc
spec:
  type: NodePort
  selector:
    app: app-1
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
